# recvis-backend

./: LICENSE  README.md  pyproject.toml
app/: main.py
app/core/: config.py  db_client.py
app/crud/: base.py  document.py  folder.py
app/models/: collected_documents.py  discipline_weightset.py  document.py  folder.py  user.py  weightset.py
app/routers/: analysis.py  collected_documents.py  detailed_analysis.py  discipline_weightset.py  document.py  folder.py  user.py  user_info.py
app/schemas/: analysis.py  folder.py
