[tool.poetry]
name = "recvis-backend"
version = "0.1.0"
description = "Recvis Backend implementation using FastAPI"
authors = ["Kay Herklotz <kay.herklotz@gmail.com>"]
readme = "README.md"
packages = [{include = "recvis_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
beanie = "^1.19.2"
aiohttp = "^3.8.4"
pydantic = "^1.10.8"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
